//2.55 Changes

//Alpha 62

Heavily optimize array initialization, and somewhat optimize array access.
	Arrays now use new ZASM instructions:
		WRITEPODARRAYRR, WRITEPODARRAYRV, WRITEPODARRAYVR, WRITEPODARRAYVV
			-These write to arrays, either using 2 registers, 2
				values, or a combination.
		READPODARRAYR, READPODARRAYV
			-These read from arrays, using either a register or
				a value for the index.
Alpha is now 62
	( Venrob, 11th April, 2020 )

//Alpha 61
Add a clear slots dialog to the script assign menu. This replaces the two clear buttons
	present prior, and allows more specific options. You can clear only missing, only
	preserved, and only imported ZASM, as well as any type of your choice, or all slots.

Added a config+checkbox to allow toggling recovering missing ZScript scripts.
	Imported ZASM scripts are unaffected by this option; they're always saved.
	If off, any scripts that would have been '++' will instead be '--'
	Config name is 'try_recovering_missing_scripts', under the '[Compiler]' heading.

Assign Slots now differentiates between preserved ZScript, and imported ZASM.
	The former shows as '++' still, the latter now uses '=='
Assign slots dlg now only shows the pertinent messages, and resizes to show
	only what it must.
Fixed crash on printing metadata >=512 characters.
Bump ZASM_VERSION to 3
	( Venrob, 9th April, 2020 )

Alpha is now 61
	( Venrob, 8th April, 2020 )

//Alpha 60
Add more copy/paste options to String Editor
Fix new combo animation respecting ASkipY
Fix register_used_tiles not respecting ASkipX/Y
Fix tile overwrite protection not respecting ASkipX/Y
Fix tile move not respecting ASkipX/Y
	( Venrob, 7th April, 2020 )

Alpha is now 60
	( Venrob, 6th April, 2020 )

//Alpha 59
Added 'messagedata->TextHeight' and 'messagedata->TextWidth'
	These are shortcuts for 'Text->MessageHeight' and 'Width' respectively.
	Should return the same values; which is the height/width of the message if